--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>io.github.arrudalabs</groupId>
     <artifactId>poc-maven-plugin</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <organization>
@@ -32,7 +32,7 @@
         <connection>scm:git:https://github.com/arrudalabs/poc-maven-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/arrudalabs/poc-maven-plugin.git</developerConnection>
         <url>https://github.com/arrudalabs/poc-maven-plugin</url>
-      <tag>poc-maven-plugin-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
