--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <name>Poc Maven Plugin</name>
     <description>It's a POC Maven Plugin project for studies purposes</description>
 
-    <url>https://arrudalabs.github.io/${project.artifactId}</url>
+    <url>https://arrudalabs.github.io/poc-maven-plugin</url>
 
     <licenses>
         <license>
