--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,8 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: 11
+        server-id: ossrh
+        gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+        gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
     - name: Build with Maven
       run: mvn -B verify -P run-its --file pom.xml
