--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,6 @@ jobs:
         distribution: 'temurin'
         java-version: 11
         overwrite-settings: false
-        settings-path: ${{ github.workspace }}
         gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
         gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
     
@@ -49,7 +48,7 @@ jobs:
           ${{ runner.os }}-maven
           
     - name: Build with Maven
-      run: mvn -B verify -P run-its --file pom.xml
+      run: mvn -B verify -P run-its -s settings.xml --file pom.xml
       env:
         SERVER_ID: ossrh 
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
