--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -18,7 +18,7 @@ name: Release Drafter
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 jobs:
   update_release_draft:
