--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -33,3 +33,19 @@ template: |
   ## Changes
 
   $CHANGES
+categories:
+  - title: 🚀 Features
+    labels:
+      - feature
+      - enhancement
+  - title: 🐛 Bug Fixes
+    labels:
+      - fix
+      - bugfix
+      - bug
+      - sentry
+  - title: 🎖️ Sentry
+    labels:
+      - sentry
+  - title: 👻 Maintenance
+    label: chore
