--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -15,7 +15,9 @@
 #
 #
 
-name: Publishing snapshot packages to the Maven Central Repository
+# Publishing snapshot packages to the Maven Central Repository
+
+name: publish-snapshot-to-maven-central
 
 on:
   workflow_dispatch:
