--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -48,6 +48,7 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
+        git config --global url."git@github.com:".insteadOf "https://github.com/"
         
     - name: Build with Maven and Deploy SNAPSHOT
       run: mvn -B release:prepare release:perform -s settings.xml --file pom.xml
