--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -48,8 +48,8 @@ jobs:
         git config --global user.name "GitHub"
         git config --global user.email "noreply@github.com"
       
-    - name: Build with Maven and Deploy SNAPSHOT
-      run: mvn -B release:prepare release:perform -s settings.xml --file pom.xml -DconnectionUrl=https://github.com/arrudalabs/poc-maven-plugin
+    - name: Build with Maven and Deploy To Maven Central Repository
+      run: mvn -B release:prepare release:perform -s settings.xml --file pom.xml
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         SERVER_ID: ossrh 
