--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>io.github.arrudalabs</groupId>
     <artifactId>poc-maven-plugin</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <organization>
@@ -32,7 +32,7 @@
         <connection>scm:git:${project.scm.url}</connection>
         <developerConnection>scm:git:${project.scm.url}</developerConnection>
         <url>https://github.com/arrudalabs/poc-maven-plugin.git</url>
-        <tag>0.0.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
