--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: 'poc-maven-plugin-${{ inputs.tag }}'
+          ref: ${{ inputs.tag }}
       
       - name: Set up JDK 11
         uses: actions/setup-java@v3
